[package]
name = "ramph"
version = "0.1.0"
edition = "2024"

[dependencies]
amp-sdk = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
